--- a/Komponente/Komponente.csproj
+++ b/Komponente/Komponente.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Baterija.cs" />
     <Compile Include="SolarniPanel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
