--- a/Komponente/Komponente.csproj
+++ b/Komponente/Komponente.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Baterija.cs" />
+    <Compile Include="IMetode.cs" />
     <Compile Include="SolarniPanel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
