--- a/SnagaSuncaForma/SnagaSuncaForma.csproj
+++ b/SnagaSuncaForma/SnagaSuncaForma.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Komponente\Komponente.csproj">
+      <Project>{f0183bff-d0bb-43ec-a327-575ce515d883}</Project>
+      <Name>Komponente</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
